# npu_compiler

./: CMakeLists.txt  README.md  iree_compiler_plugin.cmake
compiler/plugins/preprocessing/NPU/: CMakeLists.txt  registration.cpp
pass/: LowerMatmulToNPU.cpp
test/: matmul_8xKx8.mlir
tool/: npu-opt.cpp
